<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet">

    <TextView
        android:id="@+id/btn_take_photo"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/color_FFFFFFFF"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btn_select_album"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/color_FFFFFFFF"
        android:gravity="center"
        android:text="@string/select_from_album"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_take_photo" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:background="@color/color_FFFFFFFF"
        android:gravity="center"
        android:text="@string/cancel"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_select_album" />

</androidx.constraintlayout.widget.ConstraintLayout>